--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
         <!-- SHARE -->
         <section class="share">
             <div class="share--legend">
-                <img src="assets/img/share.png" /> Tell About Us:
+                <img src="assets/img/Share.png" /> Tell About Us:
             </div>
             <div class="share--item">
                 <div class="share--icon twitter">
